[package]
authors = ["Mike Lodder <redmike7@gmail.com>"]
categories = ["cryptography"]
description = "Wrapper around a secret that is stored in memory with the goal to protect against side-channel and speculative attacks."
documentation = "https://docs.rs/soteria-rs"
edition = "2021"
homepage = "https://github.com/mikelodder7/soteria-rs"
keywords = ["cryptography", "memory", "protection", "secure"]
license = "MIT OR Apache-2.0"
name = "soteria-rs"
readme = "README.md"
repository = "https://github.com/mikelodder7/soteria-rs"
version = "0.2.0"

[features]
default = []
serde = ["dep:serde", "serde_bare"]

[dependencies]
chacha20poly1305 = "0.10"
group = "0.13"
merlin = "3"
rand = "0.8"
serde = { version = "1", optional = true }
serde_bare = { version = "0.5", optional = true }
string-error = "0.1.0"
zeroize = "1"

[dev-dependencies]
k256 = "0.13"