[package]
authors = ["Mike Lodder <redmike7@gmail.com>"]
categories = ["cryptography"]
description = "Wrapper around a secret that is stored in memory with the goal to protect against side-channel and speculative attacks."
documentation = "https://docs.rs/soteria-rs"
edition = "2021"
homepage = "https://github.com/mikelodder7/soteria-rs"
keywords = ["cryptography", "memory", "protection", "secure"]
license = "MIT OR Apache-2.0"
name = "soteria-rs"
readme = "README.md"
repository = "https://github.com/mikelodder7/soteria-rs"
version = "0.3.1"

[features]
default = []
bls = ["blsful", "string-error"]
ed25519 = ["ed25519-dalek", "string-error"]
elements = ["dep:group", "string-error"]
secret-key = ["elliptic-curve", "string-error"]
serde = ["dep:serde", "serde_bare", "string-error"]
signing = ["ecdsa", "elliptic-curve", "subtle", "string-error"]
x25519 = ["string-error", "x25519-dalek"]

[dependencies]
blsful = { version = "2.4", optional = true }
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.0.0", optional = true }
elliptic-curve = { version = "0.13", optional = true }
ecdsa = { version = "0.16", features = ["arithmetic", "hazmat"], optional = true }
group = { version = "0.13", optional = true }
merlin = "3"
rand = "0.8"
serde = { version = "1", optional = true }
serde_bare = { version = "0.5", optional = true }
subtle = { version = "2.5", optional = true }
string-error = { version = "0.1.0", optional = true }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"], optional = true }
zeroize = "1"

[dev-dependencies]
k256 = { version = "0.13", features = ["ecdsa"] }